# RSI_Praktikum_Kel5

./: README.md  compose.yaml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: bcda0b099896_initial_migration.py  f2cf72e48f58_init_schema_from_erd.py
backend/src/backend/: main.py
backend/src/backend/core/: config.py
backend/src/backend/db/: base.py  base_model.py  item.py
backend/src/backend/models/: account.py  event.py  item.py  log.py  registration.py  role.py  user.py
backend/src/backend/schemas/: account.py  event.py  item.py  log.py  registration.py  role.py  user.py
backend/src/backend/services/: item.py
frontend/: package-lock.json
frontend/app/: page.tsx
