[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "raihanad3",email = "raihanadealfattah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
